--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,14 +6,13 @@ jobs:
   test-matrix:
     strategy:
       matrix:
-        arduino-platform: ["arduino:avr"]
         include:
-          - arduino-platform: "ATTinyCore:avr"
+          - arduino-platform: "arduino:avr"
             fqbn: "ATTinyCore:avr:attinyx7:chip=167"
 
     # This is the platform GitHub will use to run our workflow, we
     # pick Windows for no particular reason.
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     # This is the list of steps this job will run.
     steps:
