--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,7 @@ jobs:
       # dynamically by the build matrix.
       - name: Install platform
         run: |
-          arduino-cli core config init
-          arduino-cli config add board_manager.additional_urls http://drazzy.com/package_drazzy.com_index.json
+          arduino-cli --additional-urls http://drazzy.com/package_drazzy.com_index.json
           arduino-cli core update-index --additional-urls http://drazzy.com/package_drazzy.com_index.json
           arduino-cli core install ${{ matrix.arduino-platform }}
       # Finally, we compile the sketch, using the FQBN that was set
