--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,24 @@
 name: Compile Sketch
 
-on: [push, pull_request]
+on:
+  - push
+  - pull_request
 
 jobs:
-  test-matrix:
-    strategy:
-      matrix:
-        include:
-          - arduino-platform: "ATTinyCore:avr"
-            fqbn: "ATTinyCore:avr:attinyx7:chip=167"
-
-    # This is the platform GitHub will use to run our workflow, we
-    # pick Windows for no particular reason.
+  compile-sketch:
     runs-on: ubuntu-latest
 
-    # This is the list of steps this job will run.
     steps:
-      # First of all, we clone the repo using the `checkout` action.
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      # We use the `arduino/setup-arduino-cli` action to install and
-      # configure the Arduino CLI on the system.
-      - name: Setup Arduino CLI
-        uses: arduino/setup-arduino-cli@v1
-
-      # We then install the platform, which one will be determined
-      # dynamically by the build matrix.
-      - name: Install platform
-        run: |
-          arduino-cli core update-index --additional-urls http://drazzy.com/package_drazzy.com_index.json
-          arduino-cli config dump
-          arduino-cli core install ${{ matrix.arduino-platform }}
-      # Finally, we compile the sketch, using the FQBN that was set
-      # in the build matrix.
-      - name: Compile Sketch
-        run: arduino-cli compile --fqbn ${{ matrix.fqbn }} ./src/berlin-uhr
+      - name: Compile examples
+        uses: arduino/compile-sketches@main
+        with:
+          platforms: |
+            - source-url: "https://github.com/SpenceKonde/ATTinyCore/archive/refs/tags/1.5.2.zip"
+              name: "ATTinyCore:avr"
+            - name: "arduino:avr"
+          sketch-paths: |
+            - src/berlin-uhr
+          fqbn: "ATTinyCore:avr:attinyx7:chip=167"
